package edu.hitsz.factory;

import edu.hitsz.supply.supply;

public interface supply_f {
    public abstract supply createSupply(int x, int y, int sx, int sy);
}
